--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "react": "16.0.0",
     "react-native": "0.50.3",
     "react-native-loading-spinner-overlay": "^0.5.2",
+    "react-native-tabs": "^1.0.9",
+    "react-navigation": "^1.0.0-beta.23",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-promise": "^0.5.3",
