--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "axios": "^0.17.1",
     "expo": "^23.0.4",
     "react": "16.0.0",
+    "react-instantsearch": "^4.4.1",
     "react-native": "0.50.3",
     "react-native-loading-spinner-overlay": "^0.5.2",
+    "react-native-search-bar": "^3.3.0",
     "react-native-tabs": "^1.0.9",
     "react-navigation": "^1.0.0-beta.23",
     "react-redux": "^5.0.6",
