--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-instantsearch": "^4.4.1",
     "react-native": "0.50.3",
     "react-native-loading-spinner-overlay": "^0.5.2",
+    "react-native-maps": "^0.19.0",
     "react-native-search-bar": "^3.3.0",
     "react-native-tabs": "^1.0.9",
     "react-navigation": "^1.0.0-beta.23",
