--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-native-elements": "^0.19.0",
     "react-native-loading-spinner-overlay": "^0.5.2",
     "react-native-maps": "^0.19.0",
-    "react-native-search-bar": "^3.3.0",
+    "react-native-search-bar": "^3.4.0",
+    "react-native-searchbar": "^1.14.0",
     "react-native-tabs": "^1.0.9",
     "react-native-vector-icons": "^4.5.0",
     "react-navigation": "^1.0.0-beta.23",
